--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -20,7 +20,7 @@ header {
 
 .main-menu div {
     display: inline-block;
-    font-weight: 300;
+    font-weight: 400;
     margin-right: 30px;
     color: #C04C9C;
     font-size: 18px;
@@ -41,14 +41,14 @@ header {
     background-repeat: no-repeat;
 }
 
-.categoriess:after {
+.categories:after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    //background-color: rgba(0, 0, 0, 0.7);
 }
 
 .row-1, .row-2, .row-3 {
@@ -160,16 +160,23 @@ header {
     color: #F6ABE1;
 }
 
+.worry.show {
+    border: 5px solid #F6ABE1;
+}
+
 .sikiracija svg {
     width: 64px !important;
 }
 
 .worry:after {
     color: #C04C9C;
-    margin-top: 17px;
     display: block;
     font-weight: 300;
     pointer-events: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 19px auto;
 }
 
 .iscrpljenost:after {
@@ -195,6 +202,7 @@ header {
 }
 
 .worry {
+    position: relative;
     display: table-cell;
     vertical-align: middle;
     z-index: 9;
@@ -208,28 +216,402 @@ header {
     color: #C04C9C;
 }
 
+.worry.show p {
+    display: table-cell;
+    color: #F6ABE1;
+}
+
+.worry.show svg {
+    display: none;
+}
+
 .worry p {
     font-size: 11.7px;
-    height: 0;
     margin: 0;
-    opacity: 0;
     font-weight: 300;
     cursor: default;
-    transition: opacity .5s;
-    visibility: hidden;
+    height: 79px;
+    vertical-align: middle;
+    display: none;
+    transition: all 1s;
 }
 
 .worry:hover {
     transform: scale(1.6);
-    //display: block;
+}
+
+.worry:hover p {
+    margin-top: 25px;
 }
 
 .worry svg {
-    opacity: 1;
+    display: block;
     fill: #C04C9C;
-    visibility: visible;
     width: 80px;
     height: 86px;
     margin-top: -2px;
     margin-left: -6px;
+}
+
+.payment {
+    overflow: hidden;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.payment-sum-header {
+    display: inline-block;
+    font-size: 40px;
+    color: #fff;
+    letter-spacing: 2px;
+    font-weight: 600;
+    margin: 0 0 0 143px;
+}
+
+.payment-text {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #C04C9C;
+    overflow: hidden;
+    text-align: center;
+}
+
+.payment-text h3 {
+    color: #fff;
+    font-size: 40px;
+    margin: 0 0 7px 0;
+}
+
+.payment-text p {
+    float: left;
+    margin: 0;
+    font-weight: 300;
+    color: #fff;
+    max-width: 700px;
+}
+
+.payment-text button {
+    background-color: #6393CF;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    font-size: 18px;
+    font-weight: 100;
+    padding: 10px;
+    display: inline-block;
+    vertical-align: text-bottom;
+    width: 163px;
+    float: right;
+    margin-right: 200px;
+    margin-top: 4px;
+}
+
+.payment h1 {
+    color: #C04C9C;
+    font-size: 48px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.payment .intro {
+    margin: 0 auto 20px;
+    text-align: center;
+    width: 55%;
+    line-height: 25px;
+}
+
+.payment .skype,
+ .payment .email,
+ .payment .weeks {
+     display: inline-block;
+    position: relative;
+    vertical-align: top;
+ }
+
+.payment .skype,
+.payment .email {
+    width: 35%;
+    text-align: center;
+}
+
+.payment .skype > div,
+.payment .email > div {
+   display: inline-block;
+}
+
+.payment-spec {
+    margin-top: 5px;
+    margin-left: 30px;
+    display: inline-block;
+}
+
+.payment-spec span {
+    display: block;
+    color: #fff;
+    text-align: left;
+    margin-bottom: 3px;
+}
+
+.skype:after {
+    content: '';
+    position: absolute;
+    right: -5px;
+    top: 62px;
+    width: 2px;
+    height: 260px;
+    border-right: 1px solid #aaa;
+}
+
+.email-s-label {
+    margin-bottom: 5px;
+}
+
+.email-m-label {
+    margin-bottom: 0;
+    margin-top: 3px;
+}
+
+.paymen .skype {
+    padding-right: 40px;
+    position: relative;
+}
+
+.weeks {
+    border: 4px solid #C04C9C;
+    width: 200px;
+    height: 200px;
+    border-radius: 3px;
+    margin: 60px 49px;
+    vertical-align: middle;
+    margin-top: 84px;
+}
+
+.payment > div > * {
+    text-align: left;
+}
+
+.payment > div > h3 {
+    color: #C04C9C;
+    text-transform: uppercase;
+    text-align: left;
+    margin-left: 21%;
+}
+
+input {
+    position: absolute;
+    left: -9999px;
+}
+
+label {
+    display: block;
+    margin-bottom: 15px;
+    position: relative;
+    padding: 15px 30px 15px 62px;
+    border: 3px solid #fff;
+    border-radius: 100px;
+    color: #fff;
+    background-color: #C04C9C;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+    white-space: nowrap;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color .2s, box-shadow .2s;
+    width: 161px;
+    text-align: left;
+}
+
+.week-text {
+    margin-left: 13px;
+    font-size: 14px;
+    width: 245px;
+}
+
+.border-right {
+    border-right: 5px solid #C04C9C;
+    border-bottom: 5px solid #C04C9C;
+    width: 18px;
+    height: 18px;
+    transform: rotate(-45deg);
+    float: left;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.week-wrapper .wrapper {
+    display: inline-block;
+}
+
+.logo-text {
+    position: absolute;
+    left: 40px;
+    top: 17px;
+}
+
+.logo-text span {
+    position: relative;
+    font-weight: 400;
+    color: #27548c;
+    font-size: 14px;
+    margin-right: 20px;
+}
+
+.logo-text span:first-child:after {
+    content: '|';
+    position: absolute;
+    color: #27548c;
+    right: -12px;
+    top: 0;
+
+}
+
+.border-left {
+    float: left;
+    border-left: 5px solid #C04C9C;
+    border-top: 5px solid #C04C9C;
+    width: 18px;
+    height: 18px;
+    transform: rotate(-45deg);
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.week-wrapper {
+    display: none;
+    height: 50px;
+    margin-bottom: 15px;
+    margin-top: 14px;
+    padding-right: 13px;
+    padding-left: 37px;
+    box-sizing: border-box;
+    width: 250px;
+    padding-top: 6px;
+    text-align: left;
+}
+
+.week-wrapper .wrapper {
+    display: inline-block;
+}
+
+.week-title {
+    margin-right: 20px;
+    text-align: center;
+    float: left;
+}
+
+.week-title span {
+    display: block;
+    color: #C04C9C;
+}
+
+.n-weeks {
+    float: left;
+    width: 50px;
+    height: 40px;
+    border-radius: 4px;
+    font-size: 41px;
+    font-weight: 600;
+    color: #C04C9C;
+    line-height: 39px;
+    text-align: center;
+    text-indent: -3px;
+}
+
+.n-weeks span {
+    font-size: 41px;
+    font-weight: 600;
+    color: #C04C9C;
+    line-height: 39px;
+    text-align: center;
+    text-indent: -3px;
+}
+
+label:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 6px;
+    bottom: 10px;
+    left: 7px;
+    background-color: #fff;
+    width: 32px;
+    height: 32px;
+    border: 3px solid #fff;
+    border-radius: 100px;
+    transition: background-color .2s;
+}
+
+label:first-of-type {
+    //transform: translateX(-40px);
+}
+
+label:last-of-type {
+    //transform: translateX(40px);
+}
+
+label:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, .6);
+}
+
+input:checked + label {
+    //background-color: #ab576c;
+}
+
+input.email-s:checked ~ .week-wrapper {
+    display: block;
+}
+
+input.email-m:checked ~ .week-wrapper {
+    display: block;
+}
+
+input.email-s:checked ~ .week-text {
+    display: none;
+}
+
+input.email-m:checked ~ .week-text {
+    display: none;
+}
+
+input:checked + label:before {
+    content: '\2713';
+    display: block;
+    position: absolute;
+    top: 6px;
+    bottom: 10px;
+    left: 7px;
+    background-color: #fff;
+    width: 32px;
+    height: 32px;
+    border: 3px solid #fff;
+    border-radius: 100px;
+    transition: background-color .2s;
+    color: #C04C9C;
+    font-size: 33px;
+    line-height: 33px;
+    text-indent: 2px;
+}
+
+input:checked + label::before {
+    //background-color: #fff;
+}
+
+.contact {
+    position: absolute;
+    right: 38px;
+    top: 47px;
+    text-align: right;
+}
+
+.contact span:first-child {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: 400;
+    color: #27548c;
+    font-size: 14px;
+}
+
+.contact span:last-child {
+    font-weight: 400;
+    color: #27548c;
+    font-size: 14px;
 }
