--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -21,11 +21,12 @@
     margin: 0;
     font-weight: 300;
     color: #fff;
-    max-width: 700px;
+    max-width: 650px;
 }
 
 .hero-text button {
-    float: left;
+    float: right;
+    width: 165px;
     background-color: #6393CF;
     color: #fff;
     border: 1px solid #fff;
@@ -34,4 +35,11 @@
     font-weight: 100;
     padding: 10px;
     margin-top: 5px;
+    margin-right: 200px;
+}
+
+.hero-text button.category-button {
+   margin-top: -8px;
+    float: right;
+    margin-right: 200px;
 }
