--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -5,23 +5,25 @@
 }
 
 .hero-text {
-    padding: 15px 20px 25px 20px;
+    padding: 20px 40px 25px 40px;
     background-color: #C04C9C;
     overflow: hidden;
 }
 
 .hero-text h3 {
     color: #fff;
-    font-size: 24px;
+    font-size: 33px;
     margin: 0 0 7px 0;
 }
 
 .hero-text p {
     float: left;
+    font-size: 18px;
     margin: 0;
     font-weight: 300;
     color: #fff;
-    max-width: 650px;
+    max-width: 800px;
+    line-height: 25px;
 }
 
 .hero-text button {
@@ -35,11 +37,8 @@
     font-weight: 100;
     padding: 10px;
     margin-top: 5px;
-    margin-right: 200px;
 }
 
 .hero-text button.category-button {
-   margin-top: -8px;
     float: right;
-    margin-right: 200px;
 }
