--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -266,6 +266,7 @@ header {
     letter-spacing: 2px;
     font-weight: 600;
     margin: 0;
+    width: 320px;
 }
 
 .payment-text {
@@ -355,6 +356,7 @@ header {
 }
 
 .payment-spec {
+    width: 200px;
     margin-top: 5px;
     margin-left: 30px;
     display: inline-block;
