--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -215,7 +215,7 @@ header {
 .payment {
     overflow: hidden;
     margin-bottom: 25px;
-    padding: 20px 45px;
+    padding: 20px 45px 0;
 }
 
 .payment-sum-header {
@@ -236,7 +236,8 @@ header {
     text-align: center;
 }
 
-.payment-text h3 {
+.payment-text h3,
+.coworkers h3 {
     color: #C04C9C;
     font-weight: 700;
     font-size: 40px;
@@ -285,7 +286,8 @@ header {
     line-height: 25px;
 }
 
-.payment .intro {
+.payment .intro,
+.coworkers .intro {
     margin: 0 auto 20px;
     text-align: center;
     width:70%;
@@ -700,4 +702,114 @@ input:checked + label::before {
     width: 245px;
     margin-top: 0;
     margin-bottom: 0;
+}
+
+.coworkers {
+    padding: 5px 45px 45px;
+    text-align: center;
+}
+
+.cards {
+    display: inline-block;
+    width: 100%;
+}
+
+.photo-info-wrapper {
+    position: absolute;
+    background-color: rgba(0, 0, 0, .7);
+    width: 100%;
+    height: 320px;
+    color: #fff;
+    font-weight: 300;
+    padding: 0 20px;
+    box-sizing: border-box;
+    opacity: 0;
+}
+
+.photo-info-wrapper p {
+    line-height: 22px;
+}
+
+.card {
+    display: inline-block;
+    margin: 0 2%;
+    margin-top: 25px;
+    overflow: hidden;
+    height: 370px;
+    box-shadow: 0 0 7px 1px #888;
+    border: 8px solid #fff;
+}
+
+.card:hover .photo-info-wrapper {
+    opacity: 1;
+}
+
+.photo-wrapper {
+    height: 300px;
+    overflow: hidden;
+    border-radius: 5px 5px 0 0;
+    position: relative;
+}
+
+.photo-wrapper img {
+    width: 250px;
+    height: auto;
+}
+
+.info-wrapper {
+    width: 230px;
+    background-color: #C04C9C;
+    height: 47px;
+    border-radius: 0 0 5px 5px;
+    margin-top: 2px;
+    padding: 10px;
+    position: relative;
+}
+
+.info-wrapper:first-child {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.info-wrapper:last-child {
+    font-size: 14px;
+}
+
+.info-wrapper p {
+    margin-top: 0;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    color: #fff;
+    text-align: left;
+}
+
+.info-wrapper svg {
+    float: right;
+    top: 0;
+    z-index: 99;
+    width: 50px;
+    height: auto;
+    margin-right: 7px;
+    margin-top: -2px;
+    position: relative;
+}
+
+.diploma-wrapper {
+    position: relative;
+}
+
+.diploma-wrapper:before {
+    content: '';
+    position: absolute;
+    right: 11px;
+    top: 5px;
+    width: 43px;
+    height: 38px;
+    background-color: #fff;
+}
+
+
+
+.title-wrapper {
+    float: left;
 }
