--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -26,17 +26,21 @@
     line-height: 25px;
 }
 
+.hero-text p.preamble {
+    max-width: 800px;
+}
+
 .hero-text button {
     float: right;
     width: 165px;
-    background-color: #6393CF;
+    background-color: #246cc7;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 3px;
     font-size: 18px;
     font-weight: 100;
     padding: 10px;
-    margin-top: 5px;
+    //margin-top: 5px;
 }
 
 .hero-text button.category-button {
