--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -851,3 +851,23 @@ input:checked + label::before {
     top: 120px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, .7);
 }
+
+.checkout {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+}
+
+.basket {
+    width: 750px;
+    height: 500px;
+    padding: 45px;
+    background-color: #fff;
+    margin: calc(50% - 550px) auto;
+    border-radius: 3px;
+}
