--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -733,13 +733,14 @@ input:checked + label::before {
     height: 320px;
     color: #fff;
     font-weight: 300;
-    padding: 0 20px;
+    padding: 0 15px;
     box-sizing: border-box;
     opacity: 0;
 }
 
 .photo-info-wrapper p {
     line-height: 22px;
+    text-align: left;
 }
 
 .card {
@@ -747,7 +748,7 @@ input:checked + label::before {
     margin: 0 2%;
     margin-top: 25px;
     overflow: hidden;
-    height: 360px;
+    height: 449px;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.5);
     border: 8px solid #fff;
     background: #C04C9C;
@@ -759,19 +760,19 @@ input:checked + label::before {
 }
 
 .photo-wrapper {
-    height: 300px;
+    height: 383px;
     overflow: hidden;
     position: relative;
     border: 1px solid #fff;
 }
 
 .photo-wrapper img {
-    width: 250px;
+    width: 300px;
     height: auto;
 }
 
 .info-wrapper {
-    width: 233px;
+    width: 282px;
     background-color: #fff;
     height: 47px;
     border-radius: 0 0 5px 5px;
@@ -789,10 +790,9 @@ input:checked + label::before {
 }
 
 .info-wrapper p {
-    margin-top: 0;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    color: #333;
+    line-height: 19px;
+    font-size: 14px;
+    margin-top: 5px;
     text-align: left;
 }
 
@@ -803,7 +803,7 @@ input:checked + label::before {
     width: 50px;
     height: auto;
     margin-right: 7px;
-    margin-top: -2px;
+    margin-top: 0px;
     position: relative;
 }
 
@@ -827,6 +827,11 @@ input:checked + label::before {
 
 .title-wrapper {
     float: left;
+}
+
+.title-wrapper p:first-child {
+    font-size: 23px;
+    margin-bottom: 0;
 }
 
 .intersection {
