--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -728,9 +728,9 @@ input:checked + label::before {
 
 .photo-info-wrapper {
     position: absolute;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .6);
     width: 100%;
-    height: 320px;
+    height: 400px;
     color: #fff;
     font-weight: 300;
     padding: 0 15px;
@@ -751,7 +751,7 @@ input:checked + label::before {
     height: 449px;
     box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.5);
     border: 8px solid #fff;
-    background: #C04C9C;
+    background-color: #fff;
     border-radius: 3px;
 }
 
