--- a/src/components/Front/Checkout/styles.css
+++ b/src/components/Front/Checkout/styles.css
@@ -1,5 +1,4 @@
 .checkout {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -14,6 +13,20 @@
     height: 500px;
     padding: 45px;
     background-color: #fff;
-    margin: calc(50% - 550px) auto;
     border-radius: 3px;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    margin-left: -325px;
+    margin-top: -250px;
+    box-sizing: border-box;
+}
+
+.basket svg {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 15px;
+    top: 13px;
+    cursor: pointer;
 }
