--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -162,8 +162,8 @@
 
 .staff .diploma-open-wrapper {
     position: relative;
-    height: 70%;
-    width: 34%;
+    height: 725px;
+    width: 525px;
     z-index: 99999999;
     top: 50%;
     left: 50%;
