--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -35,12 +35,12 @@
 
 .checkout .basket p {
     color: #333;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 300;
 }
 
 .checkout .basket p:nth-child(2) {
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 0;
 }
 
@@ -49,13 +49,17 @@
     font-weight: 400;
     color: #c04c9c;
     margin-left: 2px;
-    margin-top: 5px;
-    font-size: 26px;
+    font-size: 29px;
+    border-top: 1px solid #999;
+    display: inline-block;
+    margin-top: 11px;
+    border-bottom: 1px solid#999;
+    padding: 5px;
 }
 
 .checkout .basket p:nth-child(4) {
-    margin-top: 12px;
-    margin-bottom: 0px;
+    margin-top: 20px;
+    margin-bottom: 0;
 }
 
 .checkout .basket p:nth-child(5) {
@@ -63,8 +67,12 @@
     font-weight: 400;
     color: #c04c9c;
     margin-left: 2px;
-    margin-top: 5px;
-    font-size: 26px;
+    font-size: 29px;
+    border-top: 1px solid #999;
+    display: inline-block;
+    margin-top: 11px;
+    border-bottom: 1px solid#999;
+    padding: 5px;
 }
 
 .checkout .none {
@@ -84,7 +92,11 @@
 }
 
 .checkout .basket p:nth-child(8) {
-    margin: 20px 0;
+    margin: 20px 0 0 0;
+}
+
+.checkout .basket p:nth-child(9) {
+    margin: 5px 0 0 0;
 }
 
 .checkout .basket h1 {
@@ -142,6 +154,7 @@
     font-size: 25px;
     font-weight: 200;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .checkout .basket svg {
