--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -10,9 +10,7 @@
 
 .checkout .basket {
     width: 600px;
-    min-height: 666px;
-    padding: 45px;
-    border-radius: 5px;
+    min-height: 614px;
     text-align: center;
     background-color: #fff;
     left: 50%;
@@ -23,22 +21,27 @@
     box-sizing: border-box;
 }
 
+.checkout .header {
+    width: 100%;
+    height: 80px;
+    background: #c04c9c;
+}
+
 .checkout .outer-frame {
-    position: absolute;
-    left: 14px;
-    top: 14px;
     width: 568px;
     height: 95%;
-    border: 2px solid #c04c9c;
 }
 
 .checkout .inner-frame {
     position: absolute;
-    left: 8px;
-    top: 5px;
-    width: 95%;
-    height: 96%;
-    border: 7px solid #c04c9c;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.checkout .header {
+    padding-left: 0;
 }
 
 .checkout .basket .front {
@@ -56,8 +59,8 @@
 .checkout .basket .back {
     color: #c04c9c;
     font-size: 40px;
-    text-align: left;
     display: inline-block;
+    margin-top: 7px;
 }
 
 .checkout .basket p {
@@ -67,30 +70,38 @@
 }
 
 .checkout .basket p:nth-child(2) {
-    margin-top: 5px;
+    margin-top: 15px;
     margin-bottom: 0;
+    text-align: left;
 }
 
 .checkout .basket p:nth-child(3) {
-    margin: 15px 0 0 0;
-    font-weight: 400;
+    margin: 10px 0 0 0;
+    font-weight: 300;
     color: #c04c9c;
     font-size: 29px;
-    text-align: center;
 }
 
 .checkout .basket p:nth-child(4) {
-    padding-top: 12px;
+    padding-top: 8px;
     margin-top: -2px;
     margin-bottom: 0;
+    text-align: left;
+}
+
+.checkout .basket .back button {
+    display: block;
+    width: 497px;
+    margin-top: 26px;
+    margin-left: -39px;
 }
 
 .checkout .basket p:nth-child(5) {
     margin: 0;
-    font-weight: 400;
+    font-weight: 300;
     color: #c04c9c;
     font-size: 29px;
-    margin: 14px 0 9px 0;
+    margin: 10px 0 6px 0;
     text-align: center;
 }
 
@@ -105,32 +116,39 @@
 
 .checkout .basket p:nth-child(6) {
     margin: 4px 0 14px;
+    text-align: left;
 }
 
 .checkout .basket p:nth-child(7) {
     margin: 4px 0 14px;
+    text-align: left;
 }
 
 .checkout .basket p:nth-child(8) {
     margin: 20px 0 0 0;
+    text-align: left;
 }
 
 .checkout .basket p:nth-child(9) {
     margin: 5px 0 0 0;
+    text-align: left;
 }
 
 .checkout .basket .front h1 {
     display: inline-block;
-    margin-top: 0;
-    margin-bottom: 5px;
+    margin-top: 10px;
     font-size: 40px;
+    color: #fff;
+    margin-bottom: 23px;
+    text-align: center;
 }
 
 .checkout .basket .back h1 {
     display: inline-block;
-    margin-top: 30px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
+    margin-top: 10px;
     font-size: 40px;
+    color: #fff;
 }
 
 .checkout .basket label {
@@ -139,7 +157,7 @@
     font-size: 19px;
     margin-bottom: 5px;
     margin-left: 3px;
-    font-weight: 400;
+    font-weight: 300;
     text-align: left;
 }
 
@@ -165,7 +183,6 @@
     margin-bottom: 3px;
     height: 42px;
     width: 350px;
-    border-radius: 3px;
     border: 1px solid #888;
     box-sizing: border-box;
     padding: 10px;
@@ -180,7 +197,6 @@
     margin-bottom: 19px;
     height: 110px;
     width: 350px;
-    border-radius: 3px;
     border: 1px solid #888;
     resize: none;
     box-sizing: border-box;
@@ -188,6 +204,20 @@
     padding: 10px;
     font-weight: 300;
     outline: 0;
+}
+
+.checkout .form-buttons button:first-child {
+    width: 142px;
+    margin-right: 11px;
+    background: #bbb;
+}
+
+.checkout .form-buttons button {
+    float: left
+}
+
+.checkout .form-buttons button:last-child {
+    width: 199px;
 }
 
 .checkout .basket button {
@@ -198,7 +228,6 @@
     color: #fff;
     font-size: 25px;
     font-weight: 200;
-    border-radius: 5px;
     cursor: pointer;
     outline: 0;
 }
@@ -210,4 +239,8 @@
     right: 13px;
     top: 11px;
     cursor: pointer;
+}
+
+.checkout .basket svg path {
+    fill: #fff;
 }
