--- a/src/components/Public/Quoteimage/styles.css
+++ b/src/components/Public/Quoteimage/styles.css
@@ -7,6 +7,7 @@
 .quote-image img {
     display: block;
     width: 100%;
+    margin-top: -100px;
 }
 
 .quote-image p {
@@ -14,9 +15,9 @@
     color: #fff;
     font-size: 60px;
     font-weight: 700;
-    width: 450px;
     text-align: center;
-    left: 130px;
-    top: 120px;
+    left: 50%;
+    margin-left: -365px;
+    top: 0;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, .7);
 }
