--- a/src/components/Public/Intro/styles.css
+++ b/src/components/Public/Intro/styles.css
@@ -32,7 +32,9 @@
     background-color: #246cc7;
     color: #fff;
     border: 1px solid #fff;
-    font-size: 18px;
-    font-weight: 100;
+    font-size: 20px;
     padding: 10px;
+    border-radius: 3px;
+    text-align: center;
+    font-weight: 300;
 }
